Correct section minimal size and section-title owerflow-wrap, deleted section class why and enhancement_2

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,10 @@
 *::after {
   box-sizing: border-box;
 }
+/*
+* {
+  outline: 2px solid red;
+} */
 
 body {
   min-inline-size: 375px;
